<resources>

    <!-- Name of the application [CHAR LIMIT=30] -->
    <string name="app_name">My Book Inventory</string>

    <!-- Label for overflow menu option that inserts sample book data into the db [CHAR LIMIT=20] -->
    <string name="action_add_sample_data">Add Sample Book</string>

    <!-- Label for overflow menu option that deletes all book records in the db [CHAR LIMIT=20] -->
    <string name="action_delete_all_data">Delete All Books</string>


    <!-- Label for the BookListActivity [CHAR LIMIT=20] -->
    <string name="book_activity_label">Book Inventory</string>

    <!-- Label for the AddBookActivity [CHAR LIMIT=20] -->
    <string name="add_a_book_label">Add a Book</string>

    <!-- Label for the BookDetailActivity [CHAR LIMIT=20] -->
    <string name="book_detail_label">Book Detail</string>

    <!-- Label for the EditBookActivity [CHAR LIMIT=20] -->
    <string name="edit_a_book_label">Edit a Book</string>

    <!-- Label for the book edit screen [CHAR LIMIT=20] -->
    <string name="book_label">Book</string>

    <!-- Text of the hint in EditText with ID edit_book_title[CHAR LIMIT=10] -->
    <string name="title_hint">Title</string>

    <!-- Text of the hint in EditText with ID edit_book_price[CHAR LIMIT=10] -->
    <string name="price_hint">Price</string>

    <!-- The symbol for the euro currency [CHAR LIMIT=20] -->
    <string name="currency_symbol" translatable="false">€</string>

    <!-- Text of the hint in EditText with ID edit_book_quantity [CHAR LIMIT=10] -->
    <string name="quantity_hint">Quantity</string>

    <!-- Label for "out of print" widget spinner [CHAR LIMIT=20] -->
    <string name="out_of_print_label">Out of Print</string>

    <!-- Label for the supplier section [CHAR LIMIT=10] -->
    <string name="supplier_label">Supplier</string>

    <!-- Text of the hint in EditText with ID edit_supplier_name[CHAR LIMIT=20] -->
    <string name="supplier_name_hint">Supplier Name</string>

    <!-- Text of the hint in EditText with ID edit_supplier_phone_number[CHAR LIMIT=25] -->
    <string name="supplier_phone_number_hint">Supplier Phone Number</string>

    <!-- Text of the hint in EditText with ID edit_supplier_phone_number[CHAR LIMIT=25] -->
    <string name="check">Check</string>

    <!-- Text of the hint in EditText with ID edit_supplier_phone_number[CHAR LIMIT=10] -->
    <string name="yes_out_of_print">Yes</string>

    <!-- Text of the hint in EditText with ID edit_supplier_phone_number[CHAR LIMIT=10] -->
    <string name="not_out_of_print">No</string>

    <!-- Title text for the empty view, which describes an empty shelf  [CHAR LIMIT=50] -->
    <string name="empty_view_title_text">There are no books on the shelf&#8230;</string>

    <!-- Subtitle text for the empty view that prompts the user to add a book [CHAR LIMIT=NONE] -->
    <string name="empty_view_subtitle_text">Press the blue button, then enter the required
        information and push the light blue button.\nYour book record will be saved!</string>

    <!-- Text for the "Book saved" message [CHAR LIMIT=50] -->
    <string name="successful_insert_text">Book saved</string>

    <!-- Text for the error message while saving book [CHAR LIMIT=50] -->
    <string name="insert_error_text">Error while saving book</string>

    <!-- The text displayed on the button [CHAR LIMIT=15] -->
    <string name="sale">Sale</string>

    <!-- The label of the price section [CHAR LIMIT=15] -->
    <string name="price">Price:</string>

    <!-- The label of the quantity section [CHAR LIMIT=15] -->
    <string name="quantity">Quantity:</string>

    <!-- The name of the delete button [CHAR LIMIT=15] -->
    <string name="delete_button">Delete</string>

    <!-- The name of the edit button [CHAR LIMIT=15] -->
    <string name="edit_button">Edit</string>

    <!-- The name of the order button [CHAR LIMIT=15] -->
    <string name="order_button">Order</string>

    <!-- The text of the detail layout for the label of the information on book production [CHAR LIMIT=20] -->
    <string name="detail_out_of_print_text">Out of print:</string>

    <!-- The text of the book not updated message [CHAR LIMIT=NONE] -->
    <string name="error_update_message">Error in updating</string>

    <!-- The text of the book updated successfully message  [CHAR LIMIT=NONE] -->
    <string name="successful_update_message">The book was successfully updated</string>

    <!-- Text for the minus button label [CHAR LIMIT=5] -->
    <string name="minus_button">-</string>

    <!-- Text for the plus button label [CHAR LIMIT=5] -->
    <string name="plus_button">+</string>

    <!-- Text for the error message while deleting book record [CHAR LIMIT=NONE] -->
    <string name="deletion_error_message">Error while deleting the book</string>

    <!-- Text for the successful deleting book record message [CHAR LIMIT=NONE] -->
    <string name="successful_deletion_message">Book successfully deleted</string>

    <!-- Dialog message to ask the user to confirm deleting the current book [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this book?</string>

    <!-- Dialog button text for the option to confirm deleting the current book [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>

    <!-- Dialog button text for the option to cancel deletion of the current book [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <!-- Text for the no negative value for the quantity of books allowed message [CHAR LIMIT=NONE] -->
    <string name="no_negative_values_message">Negative values for quantity of books are not allowed</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current book [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>

    <!-- Message requesting valid inputs in order to update the book entry [CHAR LIMIT=NONE] -->
    <string name="ask_for_valid_inputs_message">Please update the book with valid inputs</string>

    <!-- Message requesting valid title in order to update the book entry [CHAR LIMIT=NONE] -->
    <string name="ask_for_a_valid_title_message">I can\'t update the book record now. Please enter a valid book title next time</string>

    <!-- Message requesting valid price in order to update the book entry [CHAR LIMIT=NONE] -->
    <string name="ask_for_valid_price_message">I can\'t update the book record now. Please enter a valid price for the book next time</string>

    <!-- Message requesting valid quantity in order to update the book entry [CHAR LIMIT=NONE] -->
    <string name="ask_for_quantity_message">I can\'t update the book record now. Please enter a valid quantity for the book next time</string>

    <!-- Message requesting valid name of book supplier in order to update the book entry [CHAR LIMIT=NONE] -->
    <string name="ask_for_supplier_name_message">I can\'t update the book record now. Please enter the name of the book supplier next time</string>

    <!-- Message requesting valid phone number in order to update the book entry [CHAR LIMIT=NONE] -->
    <string name="ask_for_valid_phone_number_message">I can\'t update the book record now. Please enter a valid phone number next time</string>

    <!-- Message requesting to enter all the required fields in Add mode in order to save the book entry [CHAR LIMIT=NONE] -->
    <string name="enter_all_info_to_save_book_message">You need to enter all the required information to save a book</string>

</resources>
