<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/root_view_padding">

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginBottom="@dimen/main_text_container_vertical_spacing"
    android:layout_marginTop="@dimen/main_text_container_vertical_spacing">

    <TextView
        android:id="@+id/book_label_add_layout"
        style="@style/CommonBookLabelTextView"
        android:layout_marginBottom="@dimen/title_vertical_spacing"
        android:gravity="center"
        android:text="@string/book_label"/>

    <EditText
        android:id="@+id/add_book_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/title_hint"
        android:inputType="textCapWords" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/add_book_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/price_hint"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/currency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/currency_symbol"
            android:textSize="@dimen/text_size" />

    </LinearLayout>

    <EditText
        android:id="@+id/add_book_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/vertical_spacing"
        android:hint="@string/quantity_hint"
        android:inputType="number"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/vertical_spacing">

        <TextView
            android:id="@+id/add_out_of_print_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/side_spacing"
            android:layout_marginRight="@dimen/side_spacing"
            android:text="@string/out_of_print_label"
            android:textSize="@dimen/text_size" />

        <!-- Out of print drop-down spinner -->
        <Spinner
            android:id="@+id/add_info_on_book_production_spinner"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/spinner_height"
            android:spinnerMode="dropdown" />

    </LinearLayout>

    <TextView
        android:id="@+id/supplier_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/half_vertical_spacing"
        android:gravity="center"
        android:text="@string/supplier_label"
        android:textSize="@dimen/text_size" />

    <EditText
        android:id="@+id/add_supplier_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/half_vertical_spacing"
        android:hint="@string/supplier_name_hint"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/add_supplier_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/half_vertical_spacing"
        android:hint="@string/supplier_phone_number_hint"
        android:inputType="phone" />

</LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab2"
        style="@style/FabStyle"
        android:layout_gravity="end"/>

</RelativeLayout>