<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/root_view_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/main_text_container_vertical_spacing"
        android:layout_marginTop="@dimen/main_text_container_vertical_spacing">

        <TextView
            android:id="@+id/edit_book_label"
            style="@style/CommonBookLabelTextView"
            android:layout_marginBottom="@dimen/title_vertical_spacing"
            android:gravity="center"
            android:text="@string/book_label"/>

        <EditText
            android:id="@+id/edit_book_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/half_vertical_spacing"
            android:layout_marginTop="@dimen/half_vertical_spacing"
            android:hint="@string/title_hint"
            android:inputType="textCapWords" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/half_vertical_spacing"
        android:layout_marginTop="@dimen/half_vertical_spacing"
        android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_book_price"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/price_hint"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/currency2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/currency_symbol"
                android:textSize="@dimen/text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/half_side_spacing"
            android:layout_marginTop="@dimen/half_side_spacing"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/half_side_spacing"
                android:layout_marginRight="@dimen/half_side_spacing"
                android:text="@string/quantity"
                android:textSize="@dimen/text_size" />

            <TextView
                android:id="@+id/received_book_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/side_spacing"
                android:layout_marginRight="@dimen/side_spacing"
                android:textSize="@dimen/text_size"
                tools:text="@string/quantity_hint" />

            <Button
                android:id="@+id/minus_button"
                android:layout_width="@dimen/quantity_picker_button_side_length"
                android:layout_height="@dimen/quantity_picker_button_side_length"
                android:layout_marginLeft="@dimen/side_spacing"
                android:layout_marginStart="@dimen/side_spacing"
                android:text="@string/minus_button"
                android:textColor="@android:color/white" />

            <EditText
                android:id="@+id/edit_book_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/half_side_spacing"
                android:layout_marginStart="@dimen/half_side_spacing"
                android:layout_marginEnd="@dimen/half_side_spacing"
                android:layout_marginRight="@dimen/half_side_spacing"
                android:hint="@string/quantity_hint"
                android:inputType="number" />

            <Button
                android:id="@+id/plus_button"
                android:layout_width="@dimen/quantity_picker_button_side_length"
                android:layout_height="@dimen/quantity_picker_button_side_length"
                android:text="@string/plus_button"
                android:textColor="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/half_vertical_spacing"
            android:layout_marginTop="@dimen/half_vertical_spacing"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/edit_out_of_print_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/side_spacing"
                android:layout_marginRight="@dimen/half_side_spacing"
                android:text="@string/out_of_print_label"
                android:textSize="@dimen/text_size" />

            <!-- Out of print drop-down spinner -->
            <Spinner
                android:id="@+id/edit_info_on_book_production_spinner"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/spinner_height"
                android:spinnerMode="dropdown" />

        </LinearLayout>

        <EditText
            android:id="@+id/edit_supplier_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/half_vertical_spacing"
            android:layout_marginTop="@dimen/half_vertical_spacing"
            android:hint="@string/supplier_name_hint"
            android:inputType="textCapWords" />

        <EditText
            android:id="@+id/edit_supplier_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/half_vertical_spacing"
            android:layout_marginTop="@dimen/half_vertical_spacing"
            android:drawableLeft="@drawable/ic_phone"
            android:drawablePadding="@dimen/drawable_padding"
            android:hint="@string/supplier_phone_number_hint"
            android:inputType="phone" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/edit_fab"
        style="@style/FabStyle"
        android:layout_gravity="end" />

</RelativeLayout>