<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/root_view_padding">

    <TextView
        android:id="@+id/detail_book_title"
        style="@style/CommonBookLabelTextView"
        android:layout_marginBottom="@dimen/detail_title_text_view"
        android:layout_marginTop="@dimen/detail_title_text_view"
        tools:text="Book Title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/vertical_spacing">

        <TextView
            android:id="@+id/detail_book_price_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:layout_marginEnd="@dimen/side_spacing"
            android:layout_marginRight="@dimen/side_spacing"
            android:text="@string/price"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/detail_book_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:text="Price"
            android:textColor="@color/data_text"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/detail_currency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/currency_symbol"
            android:textSize="@dimen/text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/half_vertical_spacing"
        android:layout_marginTop="@dimen/half_vertical_spacing">

        <TextView
            android:id="@+id/detail_book_quantity_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/side_spacing"
            android:layout_marginRight="@dimen/side_spacing"
            android:text="@string/quantity"
            android:textSize="@dimen/text_size"/>

        <TextView
            android:id="@+id/detail_book_quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/data_text"
            android:textSize="@dimen/text_size"
            tools:text="Quantity"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/vertical_spacing"
        android:layout_marginTop="@dimen/half_vertical_spacing">

        <TextView
            android:id="@+id/detail_label_info_on_book_production"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/side_spacing"
            android:layout_marginRight="@dimen/side_spacing"
            android:text="@string/detail_out_of_print_text"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/detail_info_on_book_production"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/data_text"
            android:textSize="@dimen/text_size"
            tools:text="No"/>

    </LinearLayout>

    <Button
        android:id="@+id/order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/port_order_button_vertical_spacing"
        android:layout_marginBottom="@dimen/port_order_button_vertical_spacing"
        android:layout_gravity="center_horizontal"
        android:text="@string/order_button"
        android:textColor="@android:color/white"/>


    <TextView
            android:id="@+id/detail_supplier_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/half_vertical_spacing"
            android:layout_marginTop="@dimen/half_vertical_spacing"
            android:textColor="@color/data_text"
            android:textSize="@dimen/text_size"
            tools:text="Supplier\'s name" />

        <TextView
            android:id="@+id/detail_supplier_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_spacing"
            android:layout_marginTop="@dimen/half_vertical_spacing"
            android:drawableLeft="@drawable/ic_phone"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="@dimen/drawable_padding"
            android:textColor="@color/data_text"
            android:textSize="@dimen/text_size"
            tools:text="phone" />

   <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/port_button_container_vertical_spacing">


        <Button
            android:id="@+id/edit_book_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/edit_button"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/delete_book_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/delete_button"
            android:textColor="@android:color/white" />

    </RelativeLayout>

</LinearLayout>