<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/book_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:focusable="false"
    android:descendantFocusability="blocksDescendants">

    <TextView
        android:id="@+id/product_name_textview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="8dp"
        android:fontFamily="sans-serif-medium"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/colorAccent"
        tools:text="Erbe"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/sale_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/sale"
            android:focusableInTouchMode="true"
            android:textColor="@android:color/white"/>


        <LinearLayout
        android:id="@+id/price_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/price"
            android:textSize="@dimen/text_size"/>

        <TextView
            android:id="@+id/price_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textColor="#2B3D4D"
            android:textSize="@dimen/text_size"
            tools:text="100"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp"
            android:layout_marginStart="4dp"
            android:text="@string/currency_symbol"
            android:textSize="@dimen/text_size"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/quantity_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/price_container"
        android:layout_alignLeft="@id/price_container"
        android:layout_alignStart="@id/price_container"
        android:padding="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/quantity"
            android:textSize="@dimen/text_size"/>

        <TextView
            android:id="@+id/quantity_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textColor="#2B3D4D"
            android:textSize="@dimen/text_size"
            tools:text="7"/>

    </LinearLayout>

    </RelativeLayout>

</LinearLayout>